Layout with WrapPanel

--- a/Silverlight/Netsy.Favorites.Web/UserFavorites.html
+++ b/Silverlight/Netsy.Favorites.Web/UserFavorites.html
@@ -61,13 +61,13 @@
     <a href="http://github.com/AnthonySteele/Netsy/">Netsy</a> Silverlight Listings control: User Favorites
     </p>
     <div id="silverlightControlHost">
-        <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="80%" height="80%">
+        <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="336" height="675">
 		  <param name="source" value="ClientBin/Netsy.Favorites.xap"/>
 		  <param name="onError" value="onSilverlightError" />
 		  <param name="background" value="white" />
 		  <param name="minRuntimeVersion" value="3.0.40624.0" />
 		  <param name="autoUpgrade" value="true" />
-		  <param name="initParams" value="Retrieval=UserFavorites,UserId=MaidOfClay" />
+		  <param name="initParams" value="Retrieval=UserFavorites,UserId=MaidOfClay,ItemsPerPage=10" />
 		  <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=3.0.40624.0" style="text-decoration:none">
  			  <img src="http://go.microsoft.com/fwlink/?LinkId=108181" alt="Get Microsoft Silverlight" style="border-style:none"/>
 		  </a>
