Removed Border, and honored background color

--- a/Silverlight/Netsy.Favorites.Web/FrontListingsByCategory.html
+++ b/Silverlight/Netsy.Favorites.Web/FrontListingsByCategory.html
@@ -11,6 +11,8 @@
     body {
 	    padding: 0;
 	    margin: 0;
+	    background-color: Black;
+	    color: White;
     }
     #silverlightControlHost {
 	    height: 100%;
@@ -64,7 +66,7 @@
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="500" height="545">
 		  <param name="source" value="ClientBin/Netsy.Favorites.xap"/>
 		  <param name="onError" value="onSilverlightError" />
-		  <param name="background" value="white" />
+		  <param name="background" value="Black" />
 		  <param name="minRuntimeVersion" value="3.0.40624.0" />
 		  <param name="autoUpgrade" value="true" />
 		  <param name="initParams" value="Retrieval=FrontListingsByCategory,Category=Art,ItemsPerPage=12" />
