--- a/Silverlight/Netsy.Favorites.Web/FrontListingsByColor.html
+++ b/Silverlight/Netsy.Favorites.Web/FrontListingsByColor.html
@@ -11,6 +11,7 @@
     body {
 	    padding: 0;
 	    margin: 0;
+	    background-color:#0000DD
     }
     #silverlightControlHost {
 	    height: 100%;
@@ -64,10 +65,10 @@
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="668" height="272">
 		  <param name="source" value="ClientBin/Netsy.Favorites.xap"/>
 		  <param name="onError" value="onSilverlightError" />
-		  <param name="background" value="white" />
+		  <param name="background" value="#0000DD" />
 		  <param name="minRuntimeVersion" value="3.0.40624.0" />
 		  <param name="autoUpgrade" value="true" />
-		  <param name="initParams" value="Retrieval=FrontListingsByColor,Color=#0000FF,ItemsPerPage=8" />
+		  <param name="initParams" value="Retrieval=FrontListingsByColor,Color=#0000DD,ItemsPerPage=8" />
 		  <a href="http://go.microsoft.com/fwlink/?LinkID=149156&v=3.0.40624.0" style="text-decoration:none">
  			  <img src="http://go.microsoft.com/fwlink/?LinkId=108181" alt="Get Microsoft Silverlight" style="border-style:none"/>
 		  </a>
