Updated demo pages for correct .xap name

--- a/Silverlight/Netsy.Listings.Web/ShopListings.html
+++ b/Silverlight/Netsy.Listings.Web/ShopListings.html
@@ -62,7 +62,7 @@
     </p>
     <div id="silverlightControlHost">
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="668" height="272">
-		  <param name="source" value="ClientBin/Netsy.Favorites.xap"/>
+		  <param name="source" value="ClientBin/Netsy.Listings.xap"/>
 		  <param name="onError" value="onSilverlightError" />
 		  <param name="background" value="white" />
 		  <param name="minRuntimeVersion" value="3.0.40624.0" />
