--- a/Silverlight/Netsy.Listings.Web/FrontListingsByColor.html
+++ b/Silverlight/Netsy.Listings.Web/FrontListingsByColor.html
@@ -63,7 +63,7 @@
     </p>
     <div id="silverlightControlHost">
         <object data="data:application/x-silverlight-2," type="application/x-silverlight-2" width="668" height="272">
-		  <param name="source" value="ClientBin/Netsy.Favorites.xap"/>
+		  <param name="source" value="ClientBin/Netsy.Listings.xap"/>
 		  <param name="onError" value="onSilverlightError" />
 		  <param name="background" value="#0000DD" />
 		  <param name="minRuntimeVersion" value="3.0.40624.0" />
